Fix Misaligned Text

--- a/src/feature/calculator/CalculatorElectrical.css
+++ b/src/feature/calculator/CalculatorElectrical.css
@@ -1,3 +1,4 @@
 .unit-symbol {
     width: 42px;
+    justify-content: center;
 }
